--- a/Industry/Industry.vcxproj.filters
+++ b/Industry/Industry.vcxproj.filters
@@ -27,12 +27,27 @@
     <ClCompile Include="rational.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Practice4.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Cone.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="SlicedCone.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="eq2.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="rational.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Cone.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="SlicedCone.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
