--- a/Industry/Industry.vcxproj
+++ b/Industry/Industry.vcxproj
@@ -127,14 +127,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Cone.cpp" />
     <ClCompile Include="eq2.cpp" />
     <ClCompile Include="Practice2.cpp" />
     <ClCompile Include="Practice3.cpp" />
+    <ClCompile Include="Practice4.cpp" />
     <ClCompile Include="rational.cpp" />
+    <ClCompile Include="SlicedCone.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Cone.h" />
     <ClInclude Include="eq2.h" />
     <ClInclude Include="rational.h" />
+    <ClInclude Include="SlicedCone.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
